--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -5,7 +5,7 @@
     <div class="card">
         <div class="card-header"><b>회원수정을 해주세요</b></div>
         <div class="card-body">
-            <form action="#">
+            <form action="/user/update">
                 <div class="mb-3">
                     <input type="text" class="form-control" placeholder="Enter username" name="username" disabled>
                 </div>
