--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -6,7 +6,6 @@
     <div class="d-flex justify-content-end">
         <a class="btn btn-warning me-1" href="/board/{{board.id}}/updateForm">수정</a>
         <form action="/board/{{board.id}}/delete" method="post">
-            <input type="hidden" name="id"/>
             <button type="submit" class="btn btn-danger">삭제</button>
         </form>
     </div>
@@ -24,36 +23,61 @@
     <div class="card mt-3">
         <!-- 댓글등록 -->
         <div class="card-body">
-            <form action="/reply/save" method="post">
-                <input type="hidden" name="boardId" value="{{board.id}}">
-                
-                <textarea class="form-control" rows="2" name="comment"></textarea>
+            <form>
+                <input type="hidden" id="boardId" value="{{board.id}}">
+                <textarea class="form-control" rows="2" id="comment"></textarea>
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-outline-primary mt-1">댓글등록</button>
+                    <button type="button" class="btn btn-outline-primary mt-1" onclick="saveReply()">댓글등록</button>
                 </div>
             </form>
         </div>
+
+        <script>
+            async function saveReply(){
+                let requestBody = {
+                    boardId: document.querySelector("#boardId").value,
+                    comment: document.querySelector("#comment").value
+                };
+
+                console.log(requestBody);
+
+                let response = await fetch("/api/reply/save",{
+                    method:"post",
+                    headers:{
+                        "Content-Type":"application/json"
+                    },
+                    body: JSON.stringify(requestBody)
+                });
+
+                let responseBody = await response.json();
+                console.log(responseBody);   
+
+                if(responseBody.sucuess){
+                    location.reload(); //ssr  (서버사이드 랜더링)
+                 }else {
+                    alert(responseBody.data);   //응답의 바디의 데이터 
+
+                }
+            }
+        </script>
 
         <!-- 댓글목록 -->
         <div class="card-footer">
             <b>댓글리스트</b>
         </div>
         <div class="list-group">
-        {{#board.replies}}
-         <!-- 댓글아이템 -->
-            <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="d-flex">
-                    <div class="px-1 me-1 bg-primary text-white rounded">{{user.username}}</div>
-                    <div>{{comment}}</div>
+            {{#board.replies}}
+                <!-- 댓글아이템 -->
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                    <div class="d-flex">
+                        <div class="px-1 me-1 bg-primary text-white rounded">{{user.username}}</div>
+                        <div>{{comment}}</div>
+                    </div>
+                    <form action="/reply/{{id}}/delete" method="post">
+                        <button class="btn">🗑</button>
+                    </form>
                 </div>
-                <form action="/reply/{{id}}/delete" method="post">
-                <input type="hidden" name="boardId" value="{{board.Id}}"/>
-                
-                    <button class="btn">🗑</button>
-                </form>
-            </div>
-        {{/board.replies}}
-           
+            {{/board.replies}}
         </div>
     </div>
 </div>
