--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -4,10 +4,11 @@
     <div class="card">
         <div class="card-header"><b>회원가입을 해주세요</b></div>
         <div class="card-body">
-            <form action="/join" method="post">
+            <form action="/join" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <input type="text" id="username" class="form-control" placeholder="Enter username" name="username">
-                    <button type="button" class="btn btn-warning">중복체크</button>
+                     <input type="text" id="username" class="form-control" placeholder="Enter username" name="username"
+                        required maxlength="20" onchange="usernameChange()">
+                    <button type="button" class="btn btn-warning" onclick="check()">중복체크</button>
                 </div>
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password" >
@@ -15,9 +16,43 @@
                 <div class="mb-3">
                     <input type="email" class="form-control" placeholder="Enter email" name="email">
                 </div>
+                <div class="mb-3">
+                    <input type="file" class="form-control" placeholder="Enter file" name="pic">
+                </div>
                 <button id="btnJoin" type="submit" class="btn btn-primary form-control">회원가입</button>
             </form>
         </div>
     </div>
 </div>
+<script>
+    let usernameSameCheck = false;
+    function usernameChange() {
+        console.log("변경됨");
+        usernameSameCheck = false;
+    }
+    function valid() {
+        if (usernameSameCheck) {
+            return true;
+        } else {
+            alert("유저네임 중복체크를 해주세요");
+            return false;
+        }
+    }
+    async function check() {
+        let username = document.querySelector("#username").value;
+        let response = await fetch(`/api/check?username=${username}`);
+        let responseBody = await response.json(); // response.json();
+        
+      
+        if (responseBody.sucuess) {
+            alert(responseBody.data);
+            usernameSameCheck = true;
+        } else {
+            alert(responseBody.data);
+            usernameSameCheck = false;
+        }
+    }
+</script>
+
+
 {{> layout/footer}}
